# genai-101

./: LICENSE  README.md
00_Prompt_Engineering/code/: 0.1.zero_shot_prompting.py
01_LLM_Basics/code/: chatbot_openai.py
02_RAG/: requirements.txt
02_RAG/code/: rag_based_chatbot.py
03_LangChain/code/: basic102.py  basic103.py  basic104.py  basic_101.py
04_AgenticAI/code/: agentic_ai_tools.py
05_MCP/: README.md  client.py  mathserver.py  my_todo.py  pyproject.toml  requirements.txt
06_LangGraph/: 01_graph_simple.py  02_01_graph_with_edge.py  02_02_graph_with_tool.py  03_graph_with_memory.py  04_human_in_loop.py  pyproject.toml
06_LangGraph/utils/: __init__.py  display_graphs.py  node_tools.py
projects/mcp_server/: README.md  app.py  client.py  dateserver.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  run.sh  todo_ui.py  todos.db
