[project]
name = "06-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "ipython>=9.4.0",
    "langchain-community>=0.3.27",
    "langchain-tavily>=0.2.11",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.5.4",
    "langsmith>=0.4.8",
]
